--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
