--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
     "start": "next start",
     "lint": "next lint",
     "cypress": "cypress open",
-    "e2e": "start-server-and-test dev http://localhost:3000 cypress"
+    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@prisma/client": "^6.4.1",
     "ai": "^2.2.31",
     "autoprefixer": "^10.4.16",
+    "bcrypt": "^5.1.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.11",
     "openai": "^4.25.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
@@ -24,13 +34,16 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "cypress": "^14.1.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
+    "prisma": "^6.4.1",
     "start-server-and-test": "^2.0.10",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
