--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-next": "14.0.4",
     "prisma": "^6.4.1",
     "start-server-and-test": "^2.0.10",
+    "tailwind-scrollbar": "^3.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
