--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^10.0.0",
     "remark-gfm": "^4.0.1",
+    "swr": "^2.3.3",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
