--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@headlessui/react": "^2.2.0",
     "@prisma/client": "^6.4.1",
     "ai": "^2.2.37",
