--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@google/generative-ai": "^0.24.0",
     "@headlessui/react": "^2.2.0",
     "@prisma/client": "^6.4.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^2.2.37",
     "autoprefixer": "^10.4.16",
     "bcrypt": "^5.1.1",
@@ -30,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.0.0",
+    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "swr": "^2.3.3",
     "tailwindcss": "^3.4.1"
